# reactor-model-dcs

./: .gitignore  03-06-2026_00-26-48_fails.txt  CMakeLists.txt  compile_command_rp1.md  compile_command_rp4.md  config.json  data_02-06-2026_23-22-46_BETA-0.01_ALPHA-500_EB-False.csv  deploy.ps1  discretize.py  error.txt  parameters.md  plot_results.py
controller/: gpc_config.py  mpc_controller.py  mpc_coolant.py  mpc_feed.py
include/: Controller.h  MatrixMath.h  ReactorModel.h  State.h  UDPSocket.h
include/config/: ConfigLoader.h  SystemConfig.h
include/messages/: MessageConstructor.h  MessageType.h
logger/: States.py  analyzeResults.py  logger.py
logger/logs/: data_14-01-2026_12-07-56.csv  data_14-01-2026_13-27-01.csv
logger/logs/COMBINEDALL/BOTHLOAD/ALPHA-1/: data_04-06-2026_14-19-10_BETA-0.015_ALPHA-1_EB-False.csv  data_04-06-2026_14-46-33_BETA-0.005_ALPHA-1_EB-True.csv  data_04-06-2026_14-53-04_BETA-0.01_ALPHA-1_EB-True.csv  data_04-06-2026_14-59-35_BETA-0.015_ALPHA-1_EB-True.csv
logger/logs/COMBINEDALL/BOTHLOAD/ALPHA-250/: data_03-06-2026_19-46-53_BETA-0.01_ALPHA-250_EB-False.csv  data_03-06-2026_20-33-57_BETA-0.01_ALPHA-250_EB-False.csv  data_04-06-2026_14-25-41_BETA-0.015_ALPHA-250_EB-False.csv  data_04-06-2026_15-06-06_BETA-0.005_ALPHA-250_EB-True.csv  data_04-06-2026_15-12-38_BETA-0.01_ALPHA-250_EB-True.csv  data_04-06-2026_15-19-08_BETA-0.015_ALPHA-250_EB-True.csv
logger/logs/COMBINEDALL/BOTHLOAD/ALPHA-500/: data_03-06-2026_11-21-48_BETA-0.01_ALPHA-500_EB-False.csv  data_04-06-2026_14-33-30_BETA-0.015_ALPHA-500_EB-False.csv  data_04-06-2026_15-25-39_BETA-0.005_ALPHA-500_EB-True.csv  data_04-06-2026_15-32-10_BETA-0.01_ALPHA-500_EB-True.csv  data_04-06-2026_15-38-41_BETA-0.015_ALPHA-500_EB-True.csv
logger/logs/COMBINEDALL/BOTHLOAD/ALPHA-900/: data_03-06-2026_19-40-22_BETA-0.01_ALPHA-900_EB-False.csv  data_03-06-2026_20-27-24_BETA-0.01_ALPHA-900_EB-False.csv  data_04-06-2026_14-40-02_BETA-0.015_ALPHA-900_EB-False.csv  data_04-06-2026_15-45-12_BETA-0.005_ALPHA-900_EB-True.csv  data_04-06-2026_15-51-43_BETA-0.01_ALPHA-900_EB-True.csv  data_04-06-2026_15-58-14_BETA-0.015_ALPHA-900_EB-True.csv
logger/logs/COMBINEDNETWORK/BOTHLOAD/ALPHA-1/: data_04-06-2026_12-33-07_BETA-0.015_ALPHA-1_EB-False.csv  data_04-06-2026_13-00-04_BETA-0.005_ALPHA-1_EB-True.csv  data_04-06-2026_13-06-29_BETA-0.01_ALPHA-1_EB-True.csv  data_04-06-2026_13-12-54_BETA-0.015_ALPHA-1_EB-True.csv
logger/logs/COMBINEDNETWORK/BOTHLOAD/ALPHA-250/: data_04-06-2026_12-40-47_BETA-0.015_ALPHA-250_EB-False.csv  data_04-06-2026_13-19-20_BETA-0.005_ALPHA-250_EB-True.csv  data_04-06-2026_13-25-46_BETA-0.01_ALPHA-250_EB-True.csv  data_04-06-2026_13-32-12_BETA-0.015_ALPHA-250_EB-True.csv
logger/logs/COMBINEDNETWORK/BOTHLOAD/ALPHA-500/: data_04-06-2026_12-47-14_BETA-0.015_ALPHA-500_EB-False.csv  (+3 more)
logger/logs/STANDARD/ALPHA-1/: data_03-06-2026_00-27-07_BETA-0.01_ALPHA-1_EB-False.csv  data_03-06-2026_00-52-16_BETA-0.005_ALPHA-1_EB-True.csv  data_03-06-2026_00-58-34_BETA-0.01_ALPHA-1_EB-True.csv  data_03-06-2026_01-04-52_BETA-0.015_ALPHA-1_EB-True.csv  data_03-06-2026_08-01-05_BETA-0.01_ALPHA-1_EB-False.csv  data_03-06-2026_08-26-27_BETA-0.005_ALPHA-1_EB-True.csv  data_03-06-2026_08-32-49_BETA-0.01_ALPHA-1_EB-True.csv  data_03-06-2026_08-39-11_BETA-0.015_ALPHA-1_EB-True.csv  data_03-06-2026_19-39-21_BETA-0.01_ALPHA-1_EB-False.csv  data_03-06-2026_21-09-11_BETA-0.01_ALPHA-1_EB-False.csv  data_03-06-2026_21-34-30_BETA-0.005_ALPHA-1_EB-True.csv  data_03-06-2026_21-40-50_BETA-0.01_ALPHA-1_EB-True.csv  data_03-06-2026_21-47-10_BETA-0.015_ALPHA-1_EB-True.csv
logger/logs/STANDARD/ALPHA-250/: data_03-06-2026_00-33-24_BETA-0.01_ALPHA-250_EB-False.csv  data_03-06-2026_01-11-11_BETA-0.005_ALPHA-250_EB-True.csv  data_03-06-2026_01-17-33_BETA-0.01_ALPHA-250_EB-True.csv  data_03-06-2026_01-23-55_BETA-0.015_ALPHA-250_EB-True.csv  data_03-06-2026_08-07-27_BETA-0.01_ALPHA-250_EB-False.csv  data_03-06-2026_08-45-33_BETA-0.005_ALPHA-250_EB-True.csv  data_03-06-2026_10-00-17_BETA-0.01_ALPHA-250_EB-False.csv  data_03-06-2026_10-19-16_BETA-0.005_ALPHA-250_EB-True.csv  data_03-06-2026_20-46-44_BETA-0.01_ALPHA-250_EB-False.csv  data_03-06-2026_21-15-31_BETA-0.01_ALPHA-250_EB-False.csv  data_03-06-2026_21-53-32_BETA-0.005_ALPHA-250_EB-True.csv  data_03-06-2026_21-59-52_BETA-0.01_ALPHA-250_EB-True.csv  data_03-06-2026_22-06-12_BETA-0.015_ALPHA-250_EB-True.csv
logger/logs/STANDARD/ALPHA-500/: data_03-06-2026_00-39-39_BETA-0.01_ALPHA-500_EB-False.csv  data_03-06-2026_01-30-18_BETA-0.005_ALPHA-500_EB-True.csv  data_03-06-2026_01-36-40_BETA-0.01_ALPHA-500_EB-True.csv  data_03-06-2026_01-43-03_BETA-0.015_ALPHA-500_EB-True.csv  data_03-06-2026_08-13-47_BETA-0.01_ALPHA-500_EB-False.csv  data_03-06-2026_10-06-36_BETA-0.01_ALPHA-500_EB-False.csv  data_03-06-2026_11-24-04_BETA-0.01_ALPHA-500_EB-False.csv  data_03-06-2026_21-21-51_BETA-0.01_ALPHA-500_EB-False.csv  data_03-06-2026_22-12-32_BETA-0.005_ALPHA-500_EB-True.csv  data_03-06-2026_22-18-52_BETA-0.01_ALPHA-500_EB-True.csv  data_03-06-2026_22-25-13_BETA-0.015_ALPHA-500_EB-True.csv
logger/logs/STANDARD/ALPHA-900/: data_03-06-2026_00-45-57_BETA-0.01_ALPHA-900_EB-False.csv  data_03-06-2026_01-49-25_BETA-0.005_ALPHA-900_EB-True.csv  data_03-06-2026_01-55-47_BETA-0.01_ALPHA-900_EB-True.csv  data_03-06-2026_02-02-10_BETA-0.015_ALPHA-900_EB-True.csv  data_03-06-2026_08-20-07_BETA-0.01_ALPHA-900_EB-False.csv  data_03-06-2026_10-12-56_BETA-0.01_ALPHA-900_EB-False.csv  data_03-06-2026_19-53-21_BETA-0.01_ALPHA-900_EB-False.csv  data_03-06-2026_20-40-24_BETA-0.01_ALPHA-900_EB-False.csv  data_03-06-2026_21-28-10_BETA-0.01_ALPHA-900_EB-False.csv  data_03-06-2026_22-31-33_BETA-0.005_ALPHA-900_EB-True.csv  data_03-06-2026_22-37-53_BETA-0.01_ALPHA-900_EB-True.csv  data_03-06-2026_22-44-14_BETA-0.015_ALPHA-900_EB-True.csv
src/: Controller.cpp  ReactorModel.cpp  UDPSocket.cpp  coolant_main.cpp  feed_main.cpp  main.cpp  main_linux_rt.cpp  main_nucleo_freertos.cpp
src/config/: ConfigLoader.cpp
src/messages/: MessageConstructor.cpp
utils/: MessageType.py  States.py  utils.py
(+153 files in other folders)
